--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
-        "overtrue/laravel-lang": "^5.0"
+        "overtrue/laravel-lang": "^5.0",
+        "yansongda/pay": "2.10.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
