--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^8.40",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
+        "moontoast/math": "^1.2",
         "overtrue/laravel-lang": "^5.0",
         "yansongda/pay": "2.10.2"
     },
